Update README with new Sudoku app details and add multilingual support for Sudoku Classic and Killer Sudoku pages

--- a/sudokukiller/index.html
+++ b/sudokukiller/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Killer Sudoku - Daily Brain Challenge</title>
+    <title>Killer Sudoku - FN - Daily Brain Challenge</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
         h1, h2 { color: #2c3e50; }
@@ -32,7 +32,8 @@
     <h2>❤️ Why you'll love it?</h2>
     <p>Play <strong>Killer Sudoku</strong> daily to sharpen your logic, relax your mind, and enjoy a mindful brain workout.</p>
 
-    <p>👉 <strong>Download now</strong> and challenge yourself every day!</p>
+    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank"></a>Download on Android</a></strong> | 
+    <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">Download on iOS</a></strong></p>
 </div>
 
 </body>
