--- a/sudokukiller/vi/index.html
+++ b/sudokukiller/vi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Killer Sudoku - Daily Brain Challenge</title>
+    <title>Killer Sudoku - FN - Trò chơi luyện trí não hàng ngày</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
         h1, h2 { color: #2c3e50; }
@@ -32,7 +32,8 @@
     <h2>❤️ Vì sao bạn sẽ thích?</h2>
     <p>Chơi <strong>Killer Sudoku</strong> để luyện trí não mỗi ngày, thư giãn và rèn luyện sự tập trung!</p>
 
-    <p>👉 <strong>Tải ngay</strong> và bắt đầu thử thách bản thân mỗi ngày!</p>
+    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank"></a>Tải trên Android</a></strong> | 
+    <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">Tải trên iOS</a></strong></p>
 </div>
 
 </body>
