--- a/sudokukiller/ja/index.html
+++ b/sudokukiller/ja/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Killer Sudoku - Daily Brain Challenge</title>
+    <title>Killer Sudoku - FN - 毎日の脳トレチャレンジ！</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
         h1, h2 { color: #2c3e50; }
@@ -31,7 +31,8 @@
     <h2>❤️ このアプリが好きになる理由</h2>
     <p><strong>Killer Sudoku</strong>を毎日の習慣にして、集中力と論理力を楽しく鍛えましょう！</p>
 
-    <p>👉 <strong>今すぐダウンロード</strong>して、毎日の挑戦を始めましょう！</p>
+    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank">Androidでダウンロード</a></strong> | 
+    <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">iOSでダウンロード</a></strong></p>
 </div>
 
 </body>
