Remove README.md file and fix download links for Android in Killer Sudoku app pages to ensure proper navigation.

--- a/sudokukiller/index.html
+++ b/sudokukiller/index.html
@@ -32,7 +32,7 @@
     <h2>❤️ Why you'll love it?</h2>
     <p>Play <strong>Killer Sudoku</strong> daily to sharpen your logic, relax your mind, and enjoy a mindful brain workout.</p>
 
-    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank"></a>Download on Android</a></strong> | 
+    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank">Download on Android</a></strong> | 
     <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">Download on iOS</a></strong></p>
 </div>
 
