--- a/sudokukiller/vi/index.html
+++ b/sudokukiller/vi/index.html
@@ -32,7 +32,7 @@
     <h2>❤️ Vì sao bạn sẽ thích?</h2>
     <p>Chơi <strong>Killer Sudoku</strong> để luyện trí não mỗi ngày, thư giãn và rèn luyện sự tập trung!</p>
 
-    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank"></a>Tải trên Android</a></strong> | 
+    <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank">Tải trên Android</a></strong> | 
     <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">Tải trên iOS</a></strong></p>
 </div>
 
