--- a/sudokuclassic/vi/index.html
+++ b/sudokuclassic/vi/index.html
@@ -18,12 +18,61 @@
       .lang-section {
         margin-bottom: 60px;
       }
+      .header-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+      }
+      .back-button {
+        display: inline-flex;
+        align-items: center;
+        background: #007bff;
+        color: white;
+        padding: 8px 16px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background-color 0.3s;
+      }
+      .back-button:hover {
+        background: #0056b3;
+        color: white;
+        text-decoration: none;
+      }
+      .back-button svg {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+      }
+      #lang-select {
+        padding: 8px 12px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        background: white;
+        font-size: 14px;
+        margin: 10px 0;
+      }
     </style>
   </head>
   <body>
     <!-- Vietnamese -->
     <div class="lang-section" id="vi">
-      <h1>🧠 Sudoku - Thử thách trí tuệ mỗi ngày!</h1>
+      <div class="header-container">
+        <div style="display: flex; align-items: center; gap: 20px;">
+          <a href="/" class="back-button">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor">
+              <path strokeLinecap="round" strokeLinejoin="round" d="M15 19l-7-7 7-7" />
+            </svg>
+          </a>
+          <h1>🧠 Sudoku - Thử thách trí tuệ mỗi ngày!</h1>
+        </div>
+        <select id="lang-select">
+          <option value="../index.html">English</option>
+          <option value="index.html" selected>Tiếng Việt</option>
+          <option value="../ja/index.html">日本語</option>
+        </select>
+      </div>
       <p>
         Chào mừng đến với <strong>Sudoku</strong> – phiên bản hiện đại của trò
         chơi Sudoku truyền thống, được thiết kế đẹp mắt và dễ sử dụng trên mọi
@@ -54,6 +103,7 @@
         <li>🌐 Hỗ trợ đa ngôn ngữ: Tiếng Việt, Tiếng Anh, Tiếng Nhật</li>
       </ul>
 
+
       <h2>❤️ Vì sao bạn sẽ thích?</h2>
       <p>
         <strong>Sudoku</strong> giúp bạn thư giãn, cải thiện sự tập trung và
@@ -77,5 +127,11 @@
         >
       </p>
     </div>
+
+    <script>
+      document.getElementById('lang-select').addEventListener('change', function() {
+        window.location.href = this.value;
+      });
+    </script>
   </body>
 </html>
