--- a/sudokuclassic/ja/index.html
+++ b/sudokuclassic/ja/index.html
@@ -18,12 +18,61 @@
       .lang-section {
         margin-bottom: 60px;
       }
+      .header-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+      }
+      .back-button {
+        display: inline-flex;
+        align-items: center;
+        background: #007bff;
+        color: white;
+        padding: 8px 16px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background-color 0.3s;
+      }
+      .back-button:hover {
+        background: #0056b3;
+        color: white;
+        text-decoration: none;
+      }
+      .back-button svg {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+      }
+      #lang-select {
+        padding: 8px 12px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        background: white;
+        font-size: 14px;
+        margin: 10px 0;
+      }
     </style>
   </head>
   <body>
     <!-- Japanese -->
     <div class="lang-section" id="ja">
-      <h1>🧠 数独クラシック - 毎日の脳トレチャレンジ！</h1>
+      <div class="header-container">
+        <div style="display: flex; align-items: center; gap: 20px;">
+          <a href="/" class="back-button">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor">
+              <path strokeLinecap="round" strokeLinejoin="round" d="M15 19l-7-7 7-7" />
+            </svg>
+          </a>
+          <h1>🧠 数独クラシック - 毎日の脳トレチャレンジ！</h1>
+        </div>
+        <select id="lang-select">
+          <option value="../index.html">English</option>
+          <option value="../vi/index.html">Tiếng Việt</option>
+          <option value="index.html" selected>日本語</option>
+        </select>
+      </div>
       <p>
         <strong>数独クラシック</strong
         >へようこそ。定番の数独パズルが現代的なデザインで蘇り、スマホやタブレットでも快適にプレイできます。
@@ -47,6 +96,7 @@
         <li>🌐 多言語対応：英語、ベトナム語、日本語</li>
       </ul>
 
+
       <h2>❤️ なぜおすすめ？</h2>
       <p>
         <strong>数独クラシック</strong
@@ -69,5 +119,11 @@
         >
       </p>
     </div>
+
+    <script>
+      document.getElementById('lang-select').addEventListener('change', function() {
+        window.location.href = this.value;
+      });
+    </script>
   </body>
 </html>
