--- a/sudokukiller/ja/index.html
+++ b/sudokukiller/ja/index.html
@@ -9,12 +9,61 @@
         body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #333; }
         h1, h2 { color: #2c3e50; }
         .lang-section { margin-bottom: 60px; }
+        .header-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .back-button {
+            display: inline-flex;
+            align-items: center;
+            background: #007bff;
+            color: white;
+            padding: 8px 16px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+        .back-button:hover {
+            background: #0056b3;
+            color: white;
+            text-decoration: none;
+        }
+        .back-button svg {
+            width: 20px;
+            height: 20px;
+            margin-right: 8px;
+        }
+        #lang-select {
+            padding: 8px 12px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            background: white;
+            font-size: 14px;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
 
 <div class="lang-section" id="ja">
-    <h1>🧠 Killer Sudoku - 毎日の脳トレに挑戦！</h1>
+    <div class="header-container">
+        <div style="display: flex; align-items: center; gap: 20px;">
+            <a href="/" class="back-button">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" d="M15 19l-7-7 7-7" />
+                </svg>
+            </a>
+            <h1>🧠 Killer Sudoku - 毎日の脳トレに挑戦！</h1>
+        </div>
+        <select id="lang-select">
+            <option value="../index.html">English</option>
+            <option value="../vi/index.html">Tiếng Việt</option>
+            <option value="index.html" selected>日本語</option>
+        </select>
+    </div>
     <p><strong>Killer Sudoku</strong>へようこそ！伝統的な数独と数学的な“ケージ”の要素を組み合わせた、新感覚のパズルゲームです。</p>
 
     <h2>🎮 主な機能:</h2>
@@ -28,12 +77,19 @@
         <li>🆓 無料プレイ、報酬型広告ありで楽しく続けられる</li>
     </ul>
 
+
     <h2>❤️ このアプリが好きになる理由</h2>
     <p><strong>Killer Sudoku</strong>を毎日の習慣にして、集中力と論理力を楽しく鍛えましょう！</p>
 
     <p>👉 <strong><a href="https://play.google.com/store/apps/details?id=com.finbertngo.sudokukiller" target="_blank">Androidでダウンロード</a></strong> | 
     <strong><a href="https://apps.apple.com/app/id6746165333" target="_blank">iOSでダウンロード</a></strong></p>
 </div>
+
+<script>
+    document.getElementById('lang-select').addEventListener('change', function() {
+        window.location.href = this.value;
+    });
+</script>
 
 </body>
 </html>
